welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
f=false
^BDRBuggle:19: error: ';' expected but 'else' found.
else
^